added MQTT target

--- a/EmailHealthCheck/NLog.config
+++ b/EmailHealthCheck/NLog.config
@@ -7,7 +7,7 @@
 
 	<targets>
 		<target xsi:type="File" name="ToFileInfo"
-				fileName="./Spamfilter_INFO_${shortdate}.log"
+				fileName="./EmailHealthCheck_INFO_${shortdate}.log"
 				layout="${longdate} | ${pad:padding=-5:inner=${uppercase:${level}}} | ${message}"
 				archiveEvery="Monday"
 				archiveNumbering = "Rolling"
@@ -15,7 +15,7 @@
 				maxArchiveFiles="4"/>
 
 		<target xsi:type="File" name="ToFileDebug"
-				fileName="./Spamfilter_DEBUG_${shortdate}.log"
+				fileName="./EmailHealthCheck_DEBUG_${shortdate}.log"
 				layout="${longdate} | ${pad:padding=-5:inner=${uppercase:${level}}} | ${message}"
 				archiveEvery="Monday"
 				archiveNumbering = "Rolling"
@@ -32,9 +32,7 @@
 			  enableAnsiOutput="False"
 			  detectConsoleAvailable="True"
 			  detectOutputRedirected="True">
-			<highlight-row backgroundColor="Black" foregroundColor="Yellow" condition="contains('${message}', '- SPAM')" />
-			<highlight-row backgroundColor="Black" foregroundColor="Yellow" condition="contains('${message}', '- MOVED')" />
-			<highlight-row backgroundColor="Black" foregroundColor="Yellow" condition="contains('${message}', '- FORWARDED')" />
+			<highlight-row backgroundColor="Black" foregroundColor="Green" condition="contains('${message}', 'Reading from')" />
 		</target>
 
 	</targets>
